--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "postinstall": "prisma generate",
+    "postinstall": "patch-package && prisma generate",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@prisma/client": "^4.8.0",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.8.1",
@@ -19,8 +20,14 @@
     "@trpc/server": "^10.8.1",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
+    "nodemailer": "^6.9.1",
+    "patch-package": "^6.5.1",
+    "pretty-ms": "^8.0.0",
     "react": "18.2.0",
+    "react-countdown-simple": "^1.0.12",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.5",
+    "remark-gfm": "^3.0.1",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
