--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev:wss": "tsup-node ./src/server/server.ts --onSuccess=\"NODE_ENV=development node dist/server.js\"",
+    "dev:next": "next dev",
+    "dev": "run-p dev:*",
     "postinstall": "patch-package && prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -18,6 +21,8 @@
     "@trpc/next": "^10.8.1",
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
+    "dotenv": "^16.0.3",
+    "i18next": "^22.4.9",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
     "nodemailer": "^6.9.1",
@@ -26,26 +31,45 @@
     "react": "18.2.0",
     "react-countdown-simple": "^1.0.12",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.0",
+    "react-i18next": "^12.1.5",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.5",
+    "react-toastify": "^9.1.1",
+    "redis": "^4.6.4",
     "remark-gfm": "^3.0.1",
     "superjson": "1.9.1",
+    "tsx": "^3.12.3",
+    "type-fest": "^3.5.5",
+    "unique-names-generator": "^4.7.1",
+    "ws": "^8.12.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
+    "@types/mustache": "^4.2.2",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "autoprefixer": "^10.4.7",
+    "cross-env": "^7.0.3",
     "eslint": "^8.30.0",
     "eslint-config-next": "13.1.2",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.8.0",
     "tailwindcss": "^3.2.0",
+    "tsup": "^6.5.0",
     "typescript": "^4.9.4"
   },
   "ct3aMetadata": {
