--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@nextui-org/react": "^1.0.0-beta.12",
-    "@prisma/client": "^4.8.0",
+    "@prisma/client": "^4.10.1",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.8.1",
     "@trpc/next": "^10.8.1",
@@ -23,6 +23,7 @@
     "@trpc/server": "^10.8.1",
     "dotenv": "^16.0.3",
     "i18next": "^22.4.9",
+    "javascript-time-ago": "^2.5.9",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
     "nodemailer": "^6.9.1",
@@ -38,12 +39,14 @@
     "react-toastify": "^9.1.1",
     "redis": "^4.6.4",
     "remark-gfm": "^3.0.1",
+    "simple-zustand-devtools": "^1.1.0",
     "superjson": "1.9.1",
     "tsx": "^3.12.3",
     "type-fest": "^3.5.5",
     "unique-names-generator": "^4.7.1",
     "ws": "^8.12.0",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -67,7 +70,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.8.0",
+    "prisma": "^4.10.1",
     "tailwindcss": "^3.2.0",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
