--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-config-next": "13.1.2",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
+    "node-mocks-http": "^1.12.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
