--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:next": "next start",
     "test": "jest --watch",
     "coverage": "jest --coverage",
-    "release": "bumpp && gith push --follow-tags"
+    "release": "bumpp && git push --follow-tags"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
