--- a/.env.example
+++ b/.env.example
@@ -2,18 +2,22 @@
 # Keep this file up-to-date when you add new variables to `.env`.
 
 # This file will be committed to version control, so make sure not to have any secrets in it.
-# If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
+# If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
+
 # Prisma
 DATABASE_URL=file:./db.sqlite
 
 # Next Auth
-# You can generate the secret via 'openssl rand -base64 32' on Linux
-# More info: https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=
+# More info: https://next-auth.js.org/configuration/options
+NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=
-DISCORD_CLIENT_SECRET=
+# Email Provider
+EMAIL_SERVER=
+EMAIL_FROM=
+
+# Needed for the frontend
+WS_URL=
+APP_URL=
