--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.10.1",
+    "sync-dotenv": "^2.7.0",
     "tailwindcss": "^3.2.0",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
