--- a/package.json
+++ b/package.json
@@ -71,12 +71,14 @@
     "eslint-config-next": "13.1.2",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
+    "jest-mock-extended": "^3.0.1",
     "node-mocks-http": "^1.12.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.10.1",
+    "prisma-mock": "^0.3.1",
     "sync-dotenv": "^2.7.0",
     "tailwindcss": "^3.2.0",
     "tsup": "^6.5.0",
