--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/server": "^10.8.1",
     "dotenv": "^16.0.3",
     "i18next": "^22.4.9",
+    "ioredis": "^5.3.1",
     "javascript-time-ago": "^2.5.9",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
@@ -69,6 +70,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.30.0",
     "eslint-config-next": "13.1.2",
+    "ioredis-mock": "^8.2.6",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
     "jest-mock-extended": "^3.0.1",
