--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "release": "bumpp && git push --follow-tags"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@prisma/client": "^4.10.1",
