--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@trpc/server": "^10.8.1",
     "dotenv": "^16.0.3",
     "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
+    "i18next-resources-to-backend": "^1.1.1",
     "ioredis": "^5.3.1",
     "javascript-time-ago": "^2.5.9",
     "next": "13.1.2",
