--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "javascript-time-ago": "^2.5.9",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
+    "next-superjson-plugin": "^0.5.4",
     "nodemailer": "^6.9.1",
     "patch-package": "^6.5.1",
     "pretty-ms": "^8.0.0",
@@ -58,6 +59,7 @@
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.1.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
