chore: update imports to use paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
     "paths": {
       "@app/*": [
         "src/*"
+      ],
+      "@test/*": [
+        "__tests__/*"
       ]
     },
     "plugins": [
