--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "build:wss": "tsup ./src/server/server.ts",
     "build:next": "next build",
-    "dev:wss": "tsup ./src/server/server.ts --onSuccess=\"DOT_NEXT_DIRECTORY='.next-ws' NODE_ENV=development node dist/server.js\"",
-    "dev:next": "next dev",
+    "dev:wss": "tsup ./src/server/server.ts --onSuccess=\"NODE_OPTIONS='-r next-logger' DOT_NEXT_DIRECTORY='.next-ws' NODE_ENV=development node dist/server.js\"",
+    "dev:next": "NODE_OPTIONS='-r next-logger' next dev",
     "dev": "run-p dev:*",
     "postinstall": "patch-package && prisma generate",
     "lint": "next lint",
-    "start:wss": "node dist/server.js",
-    "start:next": "next start",
+    "start:wss": "NODE_OPTIONS='-r next-logger' node dist/server.js",
+    "start:next": "NODE_OPTIONS='-r next-logger' next start",
     "test": "jest --watch",
     "coverage": "jest --coverage",
     "release": "bumpp && git push --follow-tags"
@@ -35,11 +35,11 @@
     "javascript-time-ago": "^2.5.9",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
+    "next-logger": "^3.0.1",
     "next-superjson-plugin": "^0.5.4",
     "nodemailer": "^6.9.1",
     "patch-package": "^6.5.1",
     "pino": "^8.10.0",
-    "pino-logflare": "^0.3.12",
     "pretty-ms": "^8.0.0",
     "react": "18.2.0",
     "react-countdown-simple": "^1.0.12",
@@ -67,6 +67,7 @@
     "@types/jest": "^29.4.0",
     "@types/mustache": "^4.2.2",
     "@types/node": "^18.11.18",
+    "@types/pino-multi-stream": "^5.1.3",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
