--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev": "run-p dev:*",
     "postinstall": "patch-package && prisma generate",
     "lint": "next lint",
-    "start:wss": "NODE_OPTIONS='-r next-logger' node dist/server.js",
-    "start:next": "NODE_OPTIONS='-r next-logger' next start",
+    "start:wss": "NODE_OPTIONS='-r next-logger' node dist/server.js | npx pino-colada",
+    "start:next": "NODE_OPTIONS='-r next-logger' next start | npx pino-colada",
     "test": "jest --watch",
     "coverage": "jest --coverage",
     "release": "bumpp && git push --follow-tags"
@@ -85,6 +85,7 @@
     "jest-mock-extended": "^3.0.1",
     "node-mocks-http": "^1.12.1",
     "npm-run-all": "^4.1.5",
+    "pino-colada": "^2.2.2",
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
