chore: logger importing env when it shouldnt

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
 
+# Which env we're running in
+NODE_ENV=
+
 # Prisma
 DATABASE_URL=file:./db.sqlite
 
@@ -18,10 +21,10 @@ NEXTAUTH_URL=http://localhost:3000
 EMAIL_SERVER=
 EMAIL_FROM=
 
-# Needed for the frontend
-WS_URL=
-APP_URL=
-
 # Plausible
 PLAUSIBLE_KEY=
 PLAUSIBLE_SITE_ID=
+
+# Exposed to the frontend
+WS_URL=
+APP_URL=
