--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
+    "i18next-pseudo": "^2.2.1",
     "i18next-resources-to-backend": "^1.1.1",
     "ioredis": "^5.3.1",
     "javascript-time-ago": "^2.5.9",
