chore: dont allow types to be imported as values

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "importsNotUsedAsValues": "error"
   },
   "include": [
     "next-env.d.ts",
