--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,16 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18.x
-      - uses: artiomtr/jest-coverage-report-action@v1.3
+      - run: npm ci
+      - run: SKIP_ENV_VALIDATION=true npm run coverage
+
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          #   threshold: 80 # optional parameter
+          node-version: 18.x
+      - run: npm ci
+      - run: SKIP_ENV_VALIDATION=true npm run build
