--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,6 +29,12 @@ jobs:
       - run: npm ci
       - run: SKIP_ENV_VALIDATION=true npm run coverage
 
+  coverage-badge:
+    - name: Generating coverage badges
+      uses: jpb06/jest-badges-action@latest
+        with:
+          branches: main
+
   build:
     runs-on: ubuntu-latest
 
