--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,7 +34,7 @@ jobs:
         uses: jpb06/jest-badges-action@latest
         with:
           branches: main
-          commit-message: chore: updating coverage badges
+          commit-message: "chore: updating coverage badges"
 
   build:
     runs-on: ubuntu-latest
