--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,5 +12,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ArtiomTr/jest-coverage-report-action@v2
         with:
+          test_script: SKIP_ENV_VALIDATION=true npm run coverage
           github_token: ${{ secrets.GITHUB_TOKEN }}
           #   threshold: 80 # optional parameter
